--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <label for="exampleMessage">Message</label>
-                    <textarea class="u-full-width" placeholder="Hi Dave &hellip;" id="exampleMessage"></textarea>
+                    <textarea class="u-full-width" placeholder="Hi Noah &hellip;" id="exampleMessage"></textarea>
                     <label class="example-send-yourself-copy">
             <input type="checkbox">
             <span class="label-body">Send a copy to yourself</span>
